# guitar-dsp

./: Cargo.toml  README.md  plan.md
apps/standalone/: Cargo.toml  package-lock.json  package.json
apps/standalone/src/: main.rs  main_old.rs
apps/standalone/src-tauri/: Cargo.toml  tauri.conf.json
apps/standalone/src-tauri/src/: audio_meters.rs  devices_managment.rs  lib.rs  main.rs  state.rs
apps/standalone/src/lib/styles/: tokens.css
apps/standalone/src/routes/: +layout.svelte  +page.svelte
apps/wav-renderer/: Cargo.toml
apps/wav-renderer/src/: main.rs
crates/audio-io/: Cargo.toml  todo.md
crates/audio-io/src/: audio_io.rs  audio_stat.rs  device_manager.rs  input_assembler.rs  lib.rs  output_reader.rs
crates/dsp-core/: Cargo.toml
crates/dsp-core/src/: lib.rs
crates/dsp-core/src/dsp/: mod.rs  node.rs  signal_chain.rs
crates/dsp-core/src/dsp/amplifiers/: amp_model.rs  amp_node.rs  amp_param.rs  mod.rs
crates/dsp-core/src/dsp/cabinet/: cabinet.rs  convolution.rs  helpers.rs  mod.rs  partitioned_convolution.rs  partitioned_convolution_test.rs
crates/dsp-core/src/utils/: atomic_f32.rs  mod.rs
crates/dsp-core/src/wdf/: capacitor.rs  mod.rs  parallel_adapter.rs  pro.rs  resistor.rs  serial_adapter.rs  wdf_node.rs
crates/dsp-engine/: Cargo.toml
src/: lib.rs  main.rs  processing_pipeline.rs
src/dsp/: chain.rs  mod.rs  node.rs  pitch_detection.rs
src/dsp/cabinet/: cabinet.rs  helpers.rs
src/dsp/effects/: distortion.rs  gain.rs  mod.rs
src/dsp/filters/: biquad.rs  equalizer.rs  low_pass.rs  mod.rs
src/dsp/helpers/: ring_buffer.rs
(+35 files in other folders)
