[workspace]
resolver = "3"
members = [
    "crates/dsp-core",
    "apps/standalone/src-tauri",
    "crates/audio-io"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cpal = "0.17.3"
ringbuf = "0.5.0"
hound = "3.5"
realfft = "=3.0.1"
nalgebra = "0.35.0"
serde = { version = "1", features = ["derive"] }
